# MailWatch

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
src/mailwatch/: __init__.py  cli.py  main.py
src/mailwatch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mailwatch/accounts/: __init__.py  loader.py  manager.py  models.py
src/mailwatch/config/: accounts.yml  loader.py  rules.yml  settings.py
src/mailwatch/core/: __init__.py  app.py  imap_client.py  logger.py  message.py  models.py  parser.py  processor.py  scheduler.py  watcher.py
src/mailwatch/notifications/: __init__.py  email.py  manager.py
src/mailwatch/rules/: __init__.py  engine.py  filters.py  loader.py
tests/: test_config.py  test_imap.py  test_integration.py  test_mailwatch.py  test_parser.py  test_rules.py  test_scheduler.py
