[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mailwatch"
version = "0.1.0"
description = "Email monitoring and notification system"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv",
    "pydantic",
    "pyyaml",
]

[tool.setuptools.packages.find]
where = ["src"]